fixes croping images with rotations. adds button style link for cropping utilities adds name of file to croping pages
git-svn-id: http://www.zenphoto.org/svn/trunk@3834 46129fc4-274e-7f48-8cfa-5da4c607681c

--- a/zp-core/admin.css
+++ b/zp-core/admin.css
@@ -23,6 +23,7 @@ body {
 	padding: 0;
 }
 
+
 /* Main Layout
 ------------------------------ */
 #logo {
@@ -373,7 +374,7 @@ hr {
 	height: 0px;
 	border: 0px;
 	border-bottom: 1px solid #BAC9CF;
-	margin: 1em 0px;
+	margin: 0.5em 0px;
 }
 
 table.noinput {
